<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

        <View
            android:id="@+id/topViewChangePassword"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Cambio Password"
            android:textColor="#FFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/backChangePassword"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="@+id/topViewChangePassword"
            app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textOldPsw"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:text="@string/password_corrente"
                android:textColor="@color/darkGrey"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topViewChangePassword" />

            <EditText
                android:id="@+id/oldPsw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/inserisci_password_corrente"
                android:textColorHint="@color/darkGrey"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:textColor="@color/darkGrey"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/borderfield_grey"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textOldPsw"
                app:layout_constraintWidth_percent="0.8"/>

            <TextView
                android:id="@+id/textNewPsw"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="40dp"
                android:text="@string/nuova_password"
                android:textColor="@color/darkGrey"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/oldPsw" />

            <EditText
                android:id="@+id/newPsw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/inserisci_la_nuova_password"
                android:textColorHint="@color/darkGrey"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:textColor="@color/darkGrey"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/borderfield_grey"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textNewPsw"
                app:layout_constraintWidth_percent="0.8"/>


            <TextView
                android:id="@+id/textRepeatNewPsw"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="40dp"
                android:text="@string/ripeti_password"
                android:textColor="@color/darkGrey"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newPsw" />

            <EditText
                android:id="@+id/repeatNewPsw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/riinserisci_nuova_password"
                android:inputType="textPassword"
                android:textColorHint="@color/darkGrey"
                android:textSize="18sp"
                android:textColor="@color/darkGrey"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/borderfield_grey"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textRepeatNewPsw"
                app:layout_constraintWidth_percent="0.8"/>

            <Button
                android:id="@+id/buttonSavePassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:padding="13dp"
                android:text="@string/salva"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repeatNewPsw"
                />


</androidx.constraintlayout.widget.ConstraintLayout>