<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <View
        android:id="@+id/topViewLogin"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topViewLogin"/>

    <TextView
        android:id="@+id/textLogoLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="156dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topViewLogin" />

    <View
        android:id="@+id/backReg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="@+id/topViewLogin"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Space
                android:id="@+id/spaceReg"
                android:layout_width="0dp"
                android:layout_height="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textEmailReg"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:text="Email"
                android:textColor="@color/primary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spaceReg" />

            <EditText
                android:id="@+id/emailReg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Inserisci la tua email"
                android:textColorHint="@color/grey"
                android:inputType="text"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/borderfield_grey"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textEmailReg"
                app:layout_constraintWidth_percent="0.8"/>

            <TextView
                android:id="@+id/textUsernameReg"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:text="@string/username"
                android:layout_marginTop="15dp"
                android:textColor="@color/primary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailReg" />

            <EditText
                android:id="@+id/usernameReg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/inserisciusername"
                android:textColorHint="@color/grey"
                android:inputType="text"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/borderfield_grey"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textUsernameReg"
                app:layout_constraintWidth_percent="0.8"/>

            <TextView
                android:id="@+id/textPasswordReg"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textColor="@color/primary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usernameReg" />

            <EditText
                android:id="@+id/passwordReg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/inserisci_tua_password"
                android:textColorHint="@color/grey"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/borderfield_grey"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textPasswordReg"
                app:layout_constraintWidth_percent="0.8"/>


            <TextView
                android:id="@+id/textConfirmPasswordReg"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="15dp"
                android:text="@string/conferma_password"
                android:textColor="@color/primary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordReg" />

            <EditText
                android:id="@+id/confirmPasswordReg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/conferma_la_tua_password"
                android:textColorHint="@color/grey"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/borderfield_grey"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textConfirmPasswordReg"
                app:layout_constraintWidth_percent="0.8"/>


            <Button
                android:id="@+id/buttonReg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:padding="8dp"
                android:text="@string/registrati"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordReg"
                />

            <Space
                android:id="@+id/spaceBottomReg"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonReg"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>