<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <View
        android:id="@+id/topViewLogin"
        android:layout_width="0dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topViewLogin"/>

    <TextView
        android:id="@+id/textLogoLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="176dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topViewLogin" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Space
                android:id="@+id/spaceLog"
                android:layout_width="0dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textUsernameLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:text="@string/username"
                android:textColor="@color/primary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spaceLog" />

            <EditText
                android:id="@+id/usernameLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/inserisciusername"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/borderfield_grey"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textUsernameLogin"
                app:layout_constraintWidth_percent="0.8"/>

            <TextView
                android:id="@+id/textPasswordLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="30dp"
                android:text="@string/password"
                android:textColor="@color/primary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usernameLogin" />

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/inserisciPassword"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/borderfield_grey"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textPasswordLogin"
                app:layout_constraintWidth_percent="0.8"/>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:padding="8dp"
                android:text="Accedi"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
                />

            <View
                android:id="@+id/separatorLogin"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="25dp"
                android:background="@color/grey"
                android:layout_marginStart="34dp"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

            <TextView
                android:id="@+id/loginWritten1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:text="Non hai un account ? "
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.264"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separatorLogin" />

            <TextView
                android:id="@+id/loginWritten2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text=" Registrati"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.709"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separatorLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>